feat(PS-14): plant images in plant db
