# plants-db/internal/model/plant.go
@@ -3,10 +3,11 @@ package model
 import "github.com/google/uuid"
 
 type Plant struct {
-	ID             uuid.UUID
-	CommonName     string
-	ScientificName string
-	Temperature    Requirement
-	SoilMoisture   Requirement
-	LightIntensity Requirement
+	ID              uuid.UUID
+	CommonName      string
+	ScientificName  string
+	Temperature     Requirement
+	SoilMoisture    Requirement
+	LightIntensity  Requirement
+	DefaultImageURL *string
 }
